--- a/css/components.css
+++ b/css/components.css
@@ -125,7 +125,7 @@ button:active:not(:disabled) {
 }
 
 /* ===================== */
-/* SMALL DEVICES */
+/* MOBILE DEVICES */
 /* ===================== */
 @media (max-width: 600px) {    
     .buttons {
@@ -199,7 +199,7 @@ button:active:not(:disabled) {
 /* X-SMALL DEVICES */
 /* ===================== */
 @media (max-width: 330px) {
-    #gradeButtons {
+    .buttons {
         padding: 0 0 0 0;
     }
 
